--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -1,4 +1,75 @@
 <div class="container mx-auto">
   <%= render "welcomeedit"%>
-  
+  <%= form_with(model: @user, local: true) do |form| %>
+
+     <!-- start top form with progress bar-->
+  <div class="form-container">
+    <div class="progress-bar">
+      <div class="step">
+        <p>Informations physiques</p>
+        <div class="bullet">
+          <span>1</span>
+        </div>
+        <div class="check fas fa-check"></div>
+      </div>
+      <div class="step">
+        <p>Objectifs</p>
+        <div class="bullet">
+          <span>2</span>
+        </div>
+        <div class="check fas fa-check"></div>
+      </div>
+    </div>
+        <!-- end top form with progress bar-->
+
+        <!-- start frame 1-->
+    <div class="form-outer">
+      <form action="#">
+        <div class="page slide-page">
+          <div class="title">Infos basiques :</div>
+            <div class="field">
+              <%= form.label :gender, "Sexe :" %>
+              <%= form.select :gender, ['Homme', 'Femme'], required: true %>
+            </div>
+            <div class="field">
+              <%= form.label :age, "Âge :" %>
+              <%= form.number_field :user, value:current_user.age, required: true %>
+            </div>
+            <div class="field">
+              <%= form.label :height_in_cms, "Taille :" %>
+              <%= form.number_field :user, value:current_user.height_in_cms, required: true %>
+            </div>
+            <div class="field">
+              <%= form.label :weight_in_kgs, "Poids :" %>
+              <%= form.number_field :user, value:current_user.weight_in_kgs, required: true %>
+            </div>
+            <div class="field">
+              <button class="firstNext next">Suivant</button>
+            </div>
+
+               <!-- start frame 2-->
+            <div class="page">
+              <div class="title">Infos objectifs :</div>
+                <div class="field">
+                  <%= form.label :activity_level, "Activité :" %>
+                  <%= form.select :activity_level, ["Travail sédendaire et ne pratique pas ou peu d'exercice.", 'Pratique une activité sportive  1 à 3 fois par semaine.', 'Pratique une activité sportive à effort modéré 3 à 5 fois par semaine.', 'Pratique une activité sportive presque quotidienne.', 'Pratique une activité sportive intense 6 à 7 fois par semaine avec un métier exigeant une activité physique.'], required: true %>
+                </div>
+                <div class="field">
+                  <%= form.label :objective, "Objectif :" %>
+                  <%= form.select :objective, ["Perdre du poids", "Garder la ligne","Prendre du poids"]%>
+                </div>
+                <div class="field btns">
+                  <button class="prev-1 prev">Retour</button>
+                  <button class="submit">Envoyer</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+          <%end%>
+
+
 </div>
