--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -1,75 +1,59 @@
-<div class="container mx-auto">
-  <%= render "welcomeedit"%>
-  <%= form_with(model: @user, local: true) do |form| %>
+<div class="container mx-auto mb-auto">
+  <%= render 'welcomeedit'%>  
 
-     <!-- start top form with progress bar-->
-  <div class="form-container">
-    <div class="progress-bar">
-      <div class="step">
-        <p>Informations physiques</p>
-        <div class="bullet">
-          <span>1</span>
-        </div>
-        <div class="check fas fa-check"></div>
-      </div>
-      <div class="step">
-        <p>Objectifs</p>
-        <div class="bullet">
-          <span>2</span>
-        </div>
-        <div class="check fas fa-check"></div>
-      </div>
+  <div class="middle-page flex items-center justify-evenly h-full">
+
+      <!-------left-page----->
+    <div class="hidden md:contents md:mr-10 m-auto">
+    <%= image_tag("personal_data_.svg", size: "325x272", class:"data") %>
     </div>
-        <!-- end top form with progress bar-->
 
-        <!-- start frame 1-->
-    <div class="form-outer">
-      <form action="#">
-        <div class="page slide-page">
-          <div class="title">Infos basiques :</div>
-            <div class="field">
-              <%= form.label :gender, "Sexe :" %>
-              <%= form.select :gender, ['Homme', 'Femme'], required: true %>
-            </div>
-            <div class="field">
-              <%= form.label :age, "Âge :" %>
-              <%= form.number_field :user, value:current_user.age, required: true %>
-            </div>
-            <div class="field">
-              <%= form.label :height_in_cms, "Taille :" %>
-              <%= form.number_field :user, value:current_user.height_in_cms, required: true %>
-            </div>
-            <div class="field">
-              <%= form.label :weight_in_kgs, "Poids :" %>
-              <%= form.number_field :user, value:current_user.weight_in_kgs, required: true %>
-            </div>
-            <div class="field">
-              <button class="firstNext next">Suivant</button>
-            </div>
+      <!-------right-page----->
+    <div class="text-gray-700 bg-white shadow-lg rounded-md relative -mt-20 md:mt-0">
+      <%= form_with(model: @user, local: true) do |form| %>
+      <div class="lg:w-full mx-5 md:mx-auto">
+        <div class="flex flex-col sm:flex-row">
+              <!----card-left-->
+          <div class="w-1/3 md:w-1/2 text-center sm:pr-8 sm:py-8 ml-24 md:ml-0">
+            <div class="flex flex-col items-center justify-center">
+              <h2 class=" mt-4 text-gray-900 text-lg"><span class="text-primary-500 font-bold uppercase"><%= @user.last_name %></span> <%= @user.first_name%></h2>
+              <div class="w-12 h-1 bg-yellow-500 rounded mt-2 mb-4"></div>
+  
+              <ul class="text-base text-gray-600">
+              <li>
+              <div class="field font-bold">
+                <%= form.label :gender, "Sexe :" %>
+                <%= form.select :gender, ['Homme', 'Femme'], required: true %>
+              </div></li>
+                <li>
+              <div class="field font-bold">
+                <%= form.label :age, "Âge :" %>
+                <%= form.number_field :user, value:current_user.age, required: true, class:"outline-none w-10 md:w-20" %>
+              </div></li>
+              <li>
+              <div class="field font-bold">
+                <%= form.label :email, "Email :" %>
+                <%= form.text_field :email, required: true, class:"w-32 outline-none focus:ring-1 focus:ring-primary-500 rounded-md" %>
+              </div></li>
+              </ul>
+              <%= form.submit 'Mettre à jour', class:"cursor-pointer text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
 
-               <!-- start frame 2-->
-            <div class="page">
-              <div class="title">Infos objectifs :</div>
-                <div class="field">
-                  <%= form.label :activity_level, "Activité :" %>
-                  <%= form.select :activity_level, ["Travail sédendaire et ne pratique pas ou peu d'exercice.", 'Pratique une activité sportive  1 à 3 fois par semaine.', 'Pratique une activité sportive à effort modéré 3 à 5 fois par semaine.', 'Pratique une activité sportive presque quotidienne.', 'Pratique une activité sportive intense 6 à 7 fois par semaine avec un métier exigeant une activité physique.'], required: true %>
-                </div>
-                <div class="field">
-                  <%= form.label :objective, "Objectif :" %>
-                  <%= form.select :objective, ["Perdre du poids", "Garder la ligne","Prendre du poids"]%>
-                </div>
-                <div class="field btns">
-                  <button class="prev-1 prev">Retour</button>
-                  <button class="submit">Envoyer</button>
-                </div>
-              </div>
             </div>
           </div>
+          <!----card-right-->
+          <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0  border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
+            <ul class="leading-relaxed text-lg mb-4">
+            <li><span class="font-bold">Taille :</span><%= form.number_field :user, value:current_user.height_in_cms, required: true, class:"outline-none ml-1 w-16 md:w-20" %> cm</li>
+            <li><span class="font-bold">Poids :</span><%= form.number_field :user, value:current_user.weight_in_kgs, required: true, class:"outline-none w-16 ml-1 md:w-20"%> kg</li>
+            <li><span class="font-bold text-base">Activité :</span><%= form.select :activity_level, [["Travail sédendaire + pas de sport", "1"],['Sport léger 1 à 3 fois par semaine', "2"], ['Sport modéré 3 à 5 fois par semaine', "3"], ['Activité sportive presque quotidienne', "4"], ['Métier exigeant + sport intense', "5"]], required: true %></li>
+            <li><span class="font-bold">Objectif :</span><%= form.select :objective, [["Perdre du poids", "1"], ["Garder la ligne", "2"], ["Prendre du poids", "3"]]%></li>
+            <li><span class="font-bold">Besoin journalier :</span> <%= @user.daily_cal %> kcal
+            </li>
+            </ul>
+           </div>
         </div>
       </div>
+      <%end%>
     </div>
   </div>
-          <%end%>
-
-
 </div>
