--- a/app/views/users/users/_welcome.html.erb
+++ b/app/views/users/users/_welcome.html.erb
@@ -6,15 +6,18 @@
         class="text-primary-500 text-4xl md:text-5xl font-bold ml-3 "><%= current_user.first_name %></span></h1>
     <p class="text-xl md:text-2xl lg:text-2xl font-semibold mt-5 ml-10">Ton espace utilisateur</p>
   </div>
+  
   <!-- buttons -->
   <div class="mt-7 md:mt-0 flex flex-row absolute bottom-0 right-0 ">
     <%= button_to "Mes informations", current_user, method: :get, class:"text-white bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1" %>
+    <%= button_to "Créer plan", new_plan_path, method: :get, class:"text-white bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1" %>
+
     <!-- new plan modal -->
     <div data-controller="modal" data-modal-allow-background-close="false">
       <a href="#" data-action="click->modal#open"
-        class="text-white bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none mr-1 mt-1">
-        <span>Nouveau programme</span>
-      </a>
+        class="text-white bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none -mb-4">
+        <span>Nouveau programme AJAX</span>      </a>
+
       <!-- Modal Container -->
       <div data-target="modal.container"
         data-action="click->modal#closeBackground keyup@window->modal#closeWithKeyboard"
@@ -27,7 +30,7 @@
             <div class="p-8">
               <h2 class="text-xl mb-4 text-center">Combien de jours veux-tu générer ?</h2>
               <div class="flex flex-wrap justify-center">
-                <%= form_with(model: @post, url: plan_path, remote: true) do |f| %>
+                <%= form_with(model: @post, url: plan_path(current_user.id)) do |f| %>
                 <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1 -mr-25">
                   <button data-action="decrement"
                     class=" bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-l cursor-pointer outline-none ">
@@ -39,14 +42,14 @@
                     <span class="m-auto text-2xl font-thin">+</span>
                   </button>
                 </div>
-              </div>
+              </div>              
               <div class="flex justify-end items-center flex-wrap mt-6">
                 <%= f.submit "Générer", class: "text-white bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1" %>
+              <% end %>
                 <button
-                  class="text-white bg-warning border border-solid border-white hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1"
+                  class="text-white bg-warning border border-solid hover:border-warning hover:text-warning hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1"
                   data-action="click->modal#close">Retour</button>
               </div>
-              <% end %>
             </div>
           </div>
         </div>
