--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -10,7 +10,7 @@
 
       <!-------right-page----->
     <div class="text-gray-700 bg-white shadow-lg rounded-md relative -mt-20 md:mt-0">
-      <%= form_with(model: @user, local: true) do |form| %>
+      <%= form_with(model: current_user, method: "put", local: true) do |form| %>
       <div class="lg:w-full mx-5 md:mx-auto">
         <div class="flex flex-col sm:flex-row">
               <!----card-left-->
@@ -36,7 +36,7 @@
                 <%= form.text_field :email, required: true, class:"w-32 outline-none focus:ring-1 focus:ring-primary-500 rounded-md" %>
               </div></li>
               </ul>
-              <%= form.submit 'Mettre à jour', class:"cursor-pointer text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
+              <%= submit_tag 'Mettre à jour', class:"cursor-pointer text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
 
             </div>
           </div>
