--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,34 +1,41 @@
-<div class="grid min-h-screen place-items-center  mt-6">
-  <div class="w-gul p-12 form_wrapper sm:w-8/12 md:w-1/2 lg:w-3/12  shadow-2xl mb-12 bg-primary-200 rounded-lg">
-    <h1 class="text-4xl	 font-bold text-center"> <span class="umbo-header text-lb:text-6xl ">Changer mot de passe</span></h1>    
+    <!-------left-page----->
+    <div class="container  h-full p-2 flex flex-row justify-center lg:justify-between items-center ">
+      <div class="left-page hidden md:hidden lg:block lg:ml-20">
+          <%= image_tag 'ramen.svg', class: "ramen"%>
+      </div>
 
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <%= f.hidden_field :reset_password_token %>
+    <!-------right-page----->
+      <div class="right-page ">
+      <div class=" p-12 form_wrapper max-w-sm mx-auto shadow-2xl  bg-primary-200 rounded-lg ">
+        <h1 class="text-4xl	 font-bold text-center"> <span class="jumbo-header text-lb:text-6xl m-auto ">Changer mot de passe</span></h1>    
 
-        <div class="field mt-10">
-          <%= f.password_field :password, placeholder: 'Nouveau mot de passe', autocomplete: "new-password", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
-          <% if @minimum_password_length %>
-          <span class="text-xs italic text-gray-500 mt-1 ml-2">(<%= @minimum_password_length %> caractères minimum)</span>
-          <% end %><br />
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :reset_password_token %>
+
+            <div class="field mt-10">
+              <%= f.password_field :password, placeholder: 'Nouveau mot de passe', autocomplete: "new-password", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
+              <% if @minimum_password_length %>
+              <span class="text-xs italic text-gray-500 mt-1 ml-2">(<%= @minimum_password_length %> caractères minimum)</span>
+              <% end %><br />
+            </div>
+
+            <div class="field">
+              <%= f.password_field :password_confirmation, autofocus: true, placeholder: 'Confirme ton mot de passe', autocomplete: "email", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
+              <br />
+            </div>
+    
+
+        <div class="actions flex justify-center   ">
+              <%= f.submit "Changer", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
+            </div>
+
+        <% end %>
+
+        <div class="mt-6 text-sm ml-1">
+          <%= render "devise/shared/links" %>
         </div>
 
-        <div class="field">
-          <%= f.password_field :password_confirmation, autofocus: true, placeholder: 'Confirme ton mot de passe', autocomplete: "email", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
-          <br />
         </div>
- 
-
-    <div class="actions flex justify-center   ">
-          <%= f.submit "Changer", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
-        </div>
-
-    <% end %>
-
-    <div class="mt-6 text-sm ml-1">
-      <%= render "devise/shared/links" %>
+      </div>
     </div>
-
-  
-  </div>
-</div>
