--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,21 +1,29 @@
-<div class="grid min-h-screen place-items-center  mt-6">
-  <div class="w-gul p-12 form_wrapper sm:w-8/12 md:w-1/2 lg:w-3/12  shadow-2xl mb-12 bg-primary-200 rounded-lg">
-    <h1 class="text-4xl	 font-bold text-center"> <span class="umbo-header text-lb:text-6xl ">Mot de passe oublié</span></h1>    
+      <!-------left-page----->
+    <div class="container  h-full p-2 flex flex-row justify-center lg:justify-between items-center ">
+      <div class="left-page hidden md:hidden lg:block lg:ml-20">
+          <%= image_tag 'forgot_password.svg', class: "ramen"%>
+      </div>
 
-      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-      <div class="field mt-10">
-          <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "email", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
-          <br />
+    <!-------right-page----->
+      <div class="right-page ">
+      <div class=" p-12 form_wrapper max-w-sm mx-auto shadow-2xl  bg-primary-200 rounded-lg ">
+        <h1 class="text-4xl	 font-bold text-center"> <span class="jumbo-header text-lb:text-6xl m-auto ">Mot de passe oublié</span></h1>    
+
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+            <div class="field mt-10">
+                <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "email", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
+                <br />
+              </div>
+
+              <div class="actions flex justify-center">
+                <%= f.submit "Envoyez", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
+              </div>
+            <% end %>
+            <div class="mt-6 text-sm ml-1">
+              <%= render "devise/shared/links"%>
+            </div>
+          </div>
         </div>
+      </div>
 
-    <div class="actions flex justify-center   ">
-          <%= f.submit "Envoyez", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
-        </div>
-
-    <% end %>
-
-    <%= render "devise/shared/links" %>
-
-  </div>
-</div>
