--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,51 @@
-<div class="grid min-h-screen place-items-center  mt-6 ">
-    <div class="w-gul p-12 form_wrapper sm:w-8/12 md:w-1/2 lg:w-3/12  shadow-2xl mb-12 bg-primary-200 rounded-lg ">
-      <h1 class="text-4xl	 font-bold text-center"> <span class="jumbo-header text-lb:text-6xl">Edit <%= resource_name.to_s.humanize %></span></h1>    
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-      
-      <div class="field mt-10 ">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	"%>
-        <br />
+    <!-------left-page----->
+    <div class="container  h-full p-2 flex flex-row justify-center lg:justify-between items-center ">
+      <div class="left-page hidden md:hidden lg:block lg:ml-20">
+          <%= image_tag 'ramen.svg', class: "ramen"%>
       </div>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
+    <!-------right-page----->
+      <div class="right-page ">
+      <div class=" p-12 form_wrapper max-w-sm mx-auto shadow-2xl  bg-primary-200 rounded-lg ">
+        <h1 class="text-4xl	 font-bold text-center"> <span class="jumbo-header text-lb:text-6xl m-auto ">Modifier</span></h1>    
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        
+        <div class="field mt-10 ">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500"%>
+          <br />
+        </div>
 
-      <div class="field">
-        <%= f.password_field :password, placeholder: 'Nouveau mot de passe', autocomplete: "Nouveau mot de passe", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
-        <% if @minimum_password_length %>
-        <span class="text-xs italic text-gray-500 mt-1 ml-2">(<%= @minimum_password_length %> caractères minimum)</span>
-        <% end %><br />
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="field">
+          <%= f.password_field :password, placeholder: 'Nouveau mot de passe', autocomplete: "Nouveau mot de passe", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
+          <% if @minimum_password_length %>
+          <span class="text-xs italic text-gray-500 mt-1 ml-2">(<%= @minimum_password_length %> caractères minimum)</span>
+          <% end %><br />
+        </div>
+
+        <div class="field ">
+          <%= f.password_field :password_confirmation, placeholder: 'Nouveau mot de passe',autocomplete: "Nouveau mot de passe", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
+          <br />
+        </div>
+
+        <div class="field">
+          <%= f.password_field :current_password, placeholder: 'Ancien mot de passe',autocomplete: "Ancien mot de passe", autocomplete: "email",required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
+          <br />
+        </div>
+
+
+        <div class="actions flex justify-center">
+          <%= f.submit "Modifier", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
+        </div>
+
+        <% end %>
+        <div class="actions flex mt-5">
+          <%= button_to "Supprimer", registration_path(resource_name), data: { confirm: "Confirmer?" }, class:"text-white  bg-yellow-600 border border-solid border-yellow-600 hover:bg-yellow-700 active:bg-yellow-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1", method: :delete %></p>
+        </div>
       </div>
-
-      <div class="field ">
-        <%= f.password_field :password_confirmation, placeholder: 'Nouveau mot de passe',autocomplete: "Nouveau mot de passe", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
-        <br />
-      </div>
-
-      <div class="field">
-        <%= f.password_field :current_password, placeholder: 'Ancien mot de passe',autocomplete: "Ancien mot de passe", autocomplete: "email", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
-        <br />
-      </div>
-
-
-      <div class="actions flex justify-center   ">
-        <%= f.submit "Modifier", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
-      </div>
-
-      <% end %>
-      
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-      <%= link_to "Back", :back %>
     </div>
   </div>
-</div>
