--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,39 @@
- 
-
+    <!-------left-page----->
     <div class="container  h-full p-2 flex flex-row justify-center lg:justify-between items-center ">
       <div class="left-page hidden md:hidden lg:block lg:ml-20">
           <%= image_tag 'ramen.svg', class: "ramen"%>
       </div>
 
+    <!-------right-page----->
       <div class="right-page ">
       <div class=" p-12 form_wrapper max-w-sm mx-auto shadow-2xl  bg-primary-200 rounded-lg ">
         <h1 class="text-4xl	 font-bold text-center"> <span class="jumbo-header text-lb:text-6xl m-auto ">Inscription</span></h1>    
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         
             <div class="field mt-10 ">
-              <%= f.text_field :first_name, autofocus: true, placeholder: 'Prénom', class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	"%>
+              <%= f.text_field :first_name, autofocus: true, placeholder: 'Prénom',  required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500"%>
               <br />
             </div>
 
             <div class="field ">
-              <%= f.text_field :last_name, autofocus: true, placeholder: 'Nom', class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
+              <%= f.text_field :last_name, autofocus: true, placeholder: 'Nom', required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
               <br />
             </div>
 
             <div class="field">
-              <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "email", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
+              <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "email", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
               <br />
             </div>
 
             <div class="field">
-              <%= f.password_field :password, placeholder: 'Mot de passe', autocomplete: "new-password", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
+              <%= f.password_field :password, placeholder: 'Mot de passe', autocomplete: "new-password", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
               <% if @minimum_password_length %>
               <span class="text-xs italic text-gray-500 mt-1 ml-2">(<%= @minimum_password_length %> caractères minimum)</span>
               <% end %><br />
             </div>
 
             <div class="field">
-              <%= f.password_field :password_confirmation, placeholder: 'Confirmer le mot de passe', autocomplete: "new-password", class:"block w-full p-3 mt-2   bg-gray-100  border-2 border-gray-100 focus:border-primary-600 rounded-xl placeholder-gray-500	" %>
+              <%= f.password_field :password_confirmation, placeholder: 'Confirmer le mot de passe', autocomplete: "new-password", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
             </div>
 
             <div class="actions flex justify-center">
