--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto mb-auto">
   <%= render "welcome"%>
-  <p class="mt-5 ml-5 md:ml-0">Généré le :</p>
+  <p class="mt-5 ml-5 md:ml-0">Généré le :<%= @plan.created_at.strftime("%d-%m-%Y") %> </p>
         <!--card organization-->
   <div class="days flex items-center justify-center">
     <div class="mt-10 mr-1 md:mt-12">
