--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container mx-auto mb-auto">
-  <%= render "welcome"%>
-  <p class="mt-5 ml-5 md:ml-0">Généré le :<%= @plan.created_at.strftime("%d-%m-%Y") %> </p>
+  <%= render "users/users/welcome"%>
+ <p class="mt-5 ml-5 md:ml-0">Généré le :<%= @plan.created_at.strftime("%d-%m-%Y") %> </p>
+        <!--card organization-->
         <!--card organization-->
   <div class="days flex items-center justify-center">
     <div class="mt-10 mr-1 md:mt-12">
@@ -8,7 +9,7 @@
     </div>
       	<!-- day cards start -->
 	  <div class="flex mt-10 md:mt-14 lg:mt-16">
-     <% @days.each.with_index do |day, idx| %>
+     <% @plan.days.each.with_index do |day, idx| %>
        <%= link_to plan_day_path(@plan.id, day.id) do %>
          <%= render "users/days/days", idx: idx %> 
        <% end %>
@@ -20,5 +21,5 @@
       <i class="fas fa-angle-right fa-3x contents lg:hidden"></i>
     </div>
   </div>
-
+ 
 </div>
