--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,9 +25,10 @@
 					<li class="sm:mr-8 mt-4 font-semibold highlight">
 						<%= link_to "Menu", new_plan_path, class:"text-lg"%>
 					</li>
-					<li class="sm:mr-8 mt-4 font-semibold highlight">
-					<%= link_to "A propos", new_recipe_path, class:"text-lg"%>
-						
+					<% if current_user.admin %>
+						<li class="sm:mr-8 mt-4 font-semibold highlight">
+						<%= link_to "A propos", new_recipe_path, class:"text-lg"%>
+					<% end %>
 					</li>
 					<li class="sm:mr-8 mt-4 font-semibold highlight">
 					<%= link_to "Profil", user_path(current_user.id), class:"text-lg"%>
