--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -28,12 +28,12 @@
                 <li>
               <div class="tracking-wide field font-bold">
                 <%= form.label :age, "Âge :" %>
-                <%= form.number_field :age, value:current_user.age, required: true, class:"tracking-wide outline-none  w-10 md:w-20 bg-gray-100 shadow-inner" %>
+                <%= form.number_field :age, in: 7..120, value:current_user.age, required: true, class:"tracking-wide outline-none  w-10 md:w-20 bg-gray-100 shadow-inner" %>
               </div></li>
               <li>
               <div class="tracking-wide field font-bold">
                 <%= form.label :email, "Email :" %>
-                <%= form.text_field :email, required: true, class:"tracking-wide w-32 outline-none rounded-md bg-gray-100 shadow-inner" %>
+                <%= form.email_field :email, required: true, class:"tracking-wide w-32 outline-none rounded-md bg-gray-100 shadow-inner" %>
               </div></li>
                  <%= form.submit 'Mettre à jour', class:"tracking-wide cursor-pointer text-white bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1"%>
               </ul>
@@ -44,8 +44,8 @@
           <!----card-right-->
           <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0  border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
             <ul class="leading-relaxed text-lg mb-4">
-            <li><span class="font-bold tracking-wide">Taille :</span><%= form.number_field :height_in_cms, value:current_user.height_in_cms, required: true, class:"outline-none bg-gray-100 shadow-inner tracking-wideout line-none ml-1 w-16 md:w-20" %> cm</li>
-            <li><span class="font-bold tracking-wide shadow-inner">Poids :</span><%= form.number_field :weight_in_kgs, value:current_user.weight_in_kgs, required: true, class:"bg-gray-100 outline-none w-16 ml-1 md:w-20"%> kg</li>
+            <li><span class="font-bold tracking-wide">Taille :</span><%= form.number_field :height_in_cms, in: 80..250, value:current_user.height_in_cms, required: true, class:"outline-none bg-gray-100 shadow-inner tracking-wideout line-none ml-1 w-16 md:w-20" %> cm</li>
+            <li><span class="font-bold tracking-wide shadow-inner">Poids :</span><%= form.number_field :weight_in_kgs, in: 30..220, value:current_user.weight_in_kgs, required: true, class:"bg-gray-100 outline-none w-16 ml-1 md:w-20"%> kg</li>
             <li><span class="mr-2 font-bold text-base tracking-wide">Activité :</span><%= form.select :activity_level, [["Travail sédendaire + pas de sport", "1"],['Sport léger 1 à 3 fois par semaine', "2"], ['Sport modéré 3 à 5 fois par semaine', "3"], ['Activité sportive presque quotidienne', "4"], ['Métier exigeant + sport intense', "5"]], required: true %></li>
             <li><span class="font-bold tracking-wide">Objectif :</span><%= form.select :objective, [["Perdre du poids", "1"], ["Garder la ligne", "2"], ["Prendre du poids", "3"]]%></li>
             </ul>
